# CSC-299-project

./: README.md
tasks2/: README.md  tasks.py
tasks3/: pyproject.toml
tasks3/src/tasks3/: __init__.py
tasks3/tests/: test_tasks.py
tasks5/: .coverage  .coveragerc  README.md  pyproject.toml  tasks.json
tasks5/.specify/memory/: constitution.md
tasks5/.specify/templates/: plan-template.md  tasks-template.md
tasks5/docs/: migration.md  sample_tasks.json
tasks5/scripts/: benchmark_search.py
tasks5/specs/001-cli-task-manager/: plan.md  spec.md  tasks.md
tasks5/specs/001-cli-task-manager/checklists/: requirements.md
tasks5/src/cli/: args_base.py  formatting.py  logging_setup.py  main.py
tasks5/src/cli/commands/: common.py  create.py  list.py  search.py
tasks5/src/models/: status.py  task.py  validation.py
tasks5/src/repository/: errors.py  json_repository.py  schema.py
tasks5/src/services/: filtering.py  id_allocator.py  search.py  seeder.py
tasks5/src/spec_kit_task_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tasks5/tests/integration/: test_cli_create.py  test_cli_create_json.py  test_cli_list.py  test_cli_list_json.py  test_cli_search.py  test_cli_search_json.py  test_error_cases.py
tasks5/tests/unit/: test_formatting.py  test_id_allocator.py  test_list_filter.py  test_repository_create.py  test_search.py  test_task_model.py
