[project]
name = "tasks3"
version = "0.0.1"
description = "tasks3 package for CSC299"
readme = "README.md"
requires-python = ">=3.8"

# Runtime dependencies (none yet)
dependencies = []

# Console script entry point: allows `uv run tasks3 ...`
[project.scripts]
tasks3 = "tasks3:main"

# Dev dependencies for uv (pytest)
[tool.uv.dev-dependencies]
pytest = ">=7,<8"
